@@ -330,13 +330,11 @@ class parseini:
             downloadcache = os.environ.get("PIP_DOWNLOAD_CACHE", downloadcache)
             vc.downloadcache = py.path.local(downloadcache)
 
-        # on python 2.5 we can't use "--pre" and we typically
-        # need to use --insecure for pip commands because python2.5
-        # doesn't support SSL
+        # on pip-1.3.1/python 2.5 we can't use "--pre".
         pip_default_opts = ["{opts}", "{packages}"]
         info = vc._basepython_info
         if info.runnable and info.version_info < (2,6):
-            pip_default_opts.insert(0, "--insecure")
+            pass
         else:
             pip_default_opts.insert(0, "--pre")
         vc.install_command = reader.getargv(
